Modified Index Html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
     <head>
         <title>Nasa Clone Web Frontend</title>
-    </head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/styles/general.css" />
+        <link rel="stylesheet" href="/styles/footer.css" />
+        <link rel="stylesheet" href="/styles/header.css" />
+        <link rel="stylesheet" href="/styles/main.css" />
+    </head> 
     <body>
+        <header>
 
+        </header>
+        <footer>
+
+        </footer>
     </body>
 </html>
