--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
     <head>
         <title>Nasa Clone Web Frontend</title>
-        
-        
+        <link rel="stylesheet" href="styles/footer.css">
+        <link rel="stylesheet" href="styles/general.css">
+        <link rel="stylesheet" href="styles/header.css">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
+        <div class="footer">
+
+        </div>
 
     </body>
 </html>
