--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Nasa Clone Web Frontend</title>
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -12,12 +11,9 @@
         <link rel="stylesheet" href="/styles/main.css" />
     </head> 
         
-        
-    </head>
-
     <body>
         <header>
-
+            <nav></nav>
         </header>
         <footer>
 
