--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
         </header>
 
         <footer>
-            
+            <div>
+                logo
+            </div>
+            <div>
+                yang banyak
+            </div>
+            <div>
+                bawah
+            </div>
         </footer>
     </body>
 </html>
