--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/styles/general.css" />
-        <link rel="stylesheet" href="/styles/footer.css" />
-        <link rel="stylesheet" href="/styles/header.css" />
-        <link rel="stylesheet" href="/styles/main.css" />
+        <link rel="stylesheet" href="/styles/general.css">
+        <link rel="stylesheet" href="/styles/footer.css">
+        <link rel="stylesheet" href="/styles/header.css">
+        <link rel="stylesheet" href="/styles/main.css">
     </head> 
         
         
@@ -19,10 +19,32 @@
         <header>
             <nav></nav>
         </header>
-
+        <div class="main">
+            <div class="headline">
+                headline
+            </div>
+            <div class="news"> 
+                feature news
+            </div>
+            <div class="-roject1">
+                Project 1
+            </div>
+            <div class="project today">
+                Project today
+            </div>
+            <div class="start exploring">
+                Start Exploring
+            </div>
+            <div class="more topic">
+                More Topic
+            </div>
+            <div class="sign up">
+                Sign Up
+            </div>
+        </div>
         <footer>
             <div>
-                logo
+                hi
             </div>
             <div>
                 yang banyak
