add logo footer main

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/styles/general.css">
-        <link rel="stylesheet" href="/styles/footer.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="./styles/general.css">
+        <link rel="stylesheet" href="./styles/footer.css">
+        <link rel="stylesheet" href="./styles/header.css">
+        <link rel="stylesheet" href="./styles/main.css">
     </head> 
         
         
@@ -43,13 +43,13 @@
             </div>
         </div>
         <footer>
-            <div>
+            <div class="Logo">
                 hi
             </div>
-            <div>
+            <div class="Info">
                 yang banyak
             </div>
-            <div>
+            <div class="Bottom">
                 bawah
             </div>
         </footer>
