add logo nasa in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <footer>
             <div class="Logo">
-                hi
+                <img class="logo-nasa" src="./assets/nasa-logo.svg">
             </div>
             <div class="Info">
                 yang banyak
