add img logo to nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input type ="text" placeholder="Search..." />
                 </div>
                 <div class="logo">
-                    <img src="" /> Logo
+                    <img src="./assets/nasa-logo.svg" /> 
                 </div>
                 <ul>
                     <li>News & Events</li>
