add explore, search bar, and list on  nav header

--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
         <link rel="stylesheet" href="./styles/footer.css">
         <link rel="stylesheet" href="./styles/header.css">
         <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head> 
         
     <body>
         <header>
             <nav>
                 <div class="explore">
-                    <h3>Explore</h3>
+                    <button>
+                        <span>Explore</span>
+                        <span class="material-symbols-outlined">expand_circle_down</span>
+                    </button>
                 </div>
                 <div class="search">
-                    <input type ="text" placeholder="Search..." />
+                    <input type ="search" placeholder="Search..." />
                 </div>
                 <div class="logo">
                     <img src="./assets/nasa-logo.svg" /> 
                 </div>
                 <ul>
-                    <li>News & Events</li>
-                    <li>Multimedia</li>
-                    <li>NASA+</li>
+                    <li><span>News & Events</span></li>
+                    <li><span>Multimedia</span></li>
+                    <li><span>NASA+</span></li>
                 </ul>
             </nav>
         </header>
