--- a/index.html
+++ b/index.html
@@ -59,7 +59,27 @@
                 <img class="logo-nasa" src="./assets/nasa-logo.svg">
             </div>
             <div class="Info">
-                yang banyak
+                <div class="About-Nasa">
+                    <h2 class="company-name">
+                        National Aeronautics and Space Administration
+                    </h2>
+                    <p class="about-company">
+                        NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the world through discovery.
+                    </p>
+                    <p class="mission">
+                        About NASA'S Mission
+                    </p>
+                    <div class="join-us">
+                        <p class="join"> Join Us </p>
+                        <button class="arrow"> &#8594; </button>
+                    </div>
+                </div>
+                <div class="Choice">
+                    home
+                </div>
+                <div class="Sosmed">
+                    follow
+                </div>
             </div>
             <div class="Bottom">
                 bawah
