--- a/index.html
+++ b/index.html
@@ -79,7 +79,28 @@
                     </div>
                 </div>
                 <div class="Choice">
-                    home
+                    <div class="Row">
+                        <p class="Row-content"> Home </p>
+                        <p class="Row-content"> News & Events </p>
+                        <p class="Row-content"> Multimedia </p>
+                        <p class="Row-content"> Nasa+ <span class="Logo-live">LIVE</span> </p>
+                        <p class="Row-content"> Missions </p>
+                    </div>
+                    <div class="Row">
+                        <p class="Row-content"> Humans in Space </p>
+                        <p class="Row-content"> Earth & Climate </p>
+                        <p class="Row-content"> The Solar System </p>
+                        <p class="Row-content"> The Universe </p>
+                        <p class="Row-content"> Science </p>
+                    </div>
+                    <div class="Row">
+                        <p class="Row-content"> Aeronautics </p>
+                        <p class="Row-content"> Technology </p>
+                        <p class="Row-content"> Learning Resources </p>
+                        <p class="Row-content"> About NASA </p>
+                        <p class="Row-content"> NASA en Español </p>
+                    </div>
+                   
                 </div>
                 <div class="Sosmed">
                     follow
