edit footer choice

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <p class="Row-content"> Home </p>
                         <p class="Row-content"> News & Events </p>
                         <p class="Row-content"> Multimedia </p>
-                        <p class="Row-content"> Nasa+ <span class="Logo-live">LIVE</span> </p>
+                        <p class="Row-content"> NASA+ <span class="Logo-live">L I V E</span> </p>
                         <p class="Row-content"> Missions </p>
                     </div>
                     <div class="Row">
