modified dropdown position on header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="news-multi-live">
                     <ul>
                         <li>
-                            <div class="dropDown-list">
+                            <div class="dropdown-list">
                                 <button class="dropdown-button" onclick="toggleDropdown('handleDropdown_news')">
                                     <span>News & Events</span>
                                     <span class="material-symbols-outlined">
@@ -63,7 +63,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="dropDown-list">
+                            <div class="dropdown-list">
                                 <button  class="dropdown-button" onclick="toggleDropdown('handleDropdown_multimedia')">
                                     <span>Multimedia</span>
                                     <span class="material-symbols-outlined">
@@ -71,7 +71,7 @@
                                     </span>
                                 </button>
                                 <div class="dropdown-content" id="handleDropdown_multimedia">
-                                    
+                                    <button ><h3>Multimedia</h3><span class="arrow">&#8594;</span> </button>
                                 </div>
                             </div>
                         </li>
