add list of menu to news&events and multimedia dropdown on header

--- a/index.html
+++ b/index.html
@@ -45,36 +45,106 @@
                     <input type ="search" placeholder="Search..." />
                 </div>
                 <div class="logo">
-                    <img src="./assets/nasa-logo.svg" /> 
+                    <a href="#"><img src="./assets/nasa-logo.svg" /></a> 
                 </div>
                 <div class="news-multi-live">
                     <ul>
                         <li>
-                            <div class="dropdown-list">
+                            <div class="dropdown-list" id="newsEvents">
                                 <button class="dropdown-button" onclick="toggleDropdown('handleDropdown_news')">
                                     <span>News & Events</span>
                                     <span class="material-symbols-outlined">
                                         arrow_drop_down
                                     </span>
                                 </button>
-                                <div class="dropdown-content" id="handleDropdown_news">
-                                    <button ><h3>News & Events</h3><span class="arrow">&#8594;</span> </button>
-                                </div>
+                                <ul class="dropdown-content" id="handleDropdown_news">
+                                    <li>
+                                        <button >
+                                            <h3>News & Events</h3>
+                                            <span class="arrow">&#8594;</span> 
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <a href="#">All Nasa News</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Video Series on NASA+</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Podcast</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Blogs</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Newsletters</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Social Media</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Media Resources</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Events</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Upcoming Launches & Landings</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Virtual Guest Program</a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li>
-                            <div class="dropdown-list">
+                            <div class="dropdown-list" id="multimedia">
                                 <button  class="dropdown-button" onclick="toggleDropdown('handleDropdown_multimedia')">
                                     <span>Multimedia</span>
                                     <span class="material-symbols-outlined">
                                         arrow_drop_down
                                     </span>
                                 </button>
-                                <div class="dropdown-content" id="handleDropdown_multimedia">
-                                    <button ><h3>Multimedia</h3><span class="arrow">&#8594;</span> </button>
-                                </div>
+                                <ul class="dropdown-content" id="handleDropdown_multimedia">
+                                    <li>
+                                        <button>
+                                            <h3>Multimedia</h3>
+                                            <span class="arrow">&#8594;</span> 
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <a href="#">NASA+</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Images</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">NASA Live</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">NASA Apps</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Podcasts</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Images of the Day</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">e-Books</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Sounds and Ringtones</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Interactives</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">STEM Multimedia</a>
+                                    </li>
+                                </ul>
                             </div>
-                        </li>
+                        </li>  
                         <li>
                             <button>
                                 <span>NASA+</span><span class="Logo-live">L I V E</span>
