--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="./script.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head> 
         
     <body>
@@ -153,7 +154,36 @@
                    
                 </div>
                 <div class="Sosmed">
-                    follow
+                    <div class="Follow">
+                        Follow NASA
+                    </div>
+                    <div class="Button-Sosmed">
+                        <button class="search-button">
+                            <img class="search-icon" src="icon/search.svg">
+                            <div class="tooltip"> Search </div>
+                        </button>
+                        <button class="facebook">
+                            <img class="sosmed-icon" src="icon/search.svg">
+                        </button>
+                    </div>
+                    <div class="social-buttons">
+                        <a href="https://facebook.com" class="facebook">
+                            <i class="fab fa-facebook-f"></i> Facebook
+                        </a>
+                        <a href="https://twitter.com" class="twitter">
+                            <i class="fab fa-twitter"></i> Twitter
+                        </a>
+                        <a href="https://instagram.com" class="instagram">
+                            <i class="fab fa-instagram"></i> Instagram
+                        </a>
+                    </div>
+                    <div class="More">
+                        More NASA Social Accounts
+                    </div>
+                    <div class="Newsletter">
+                        NASA Newsletter
+                    </div>
+
                 </div>
             </div>
             <div class="Bottom">
